<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bus__stop__input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeyanthasingam.busroutefinder.bus_Stop_Input">

    <TextView
        android:text="@string/starting_bus_stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHighlight="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/ending_bus_stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHighlight="@android:color/darker_gray"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:background="@drawable/edit_text_bg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="Enter the halt (eg:wellawatte arpico)">
        <requestFocus/>

        </AutoCompleteTextView>

    <AutoCompleteTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/editText2"
        android:hint="Enter the halt (eg:Dehiwala Junction)">

        <requestFocus/>
        </AutoCompleteTextView>


    <Button
        android:text="@string/find_the_bus_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/button2"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button"
        android:elevation="0dp"
        android:padding="10dp"
        android:textColor="@color/button_text_colour" />
</RelativeLayout>
