<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeyanthasingam.busroutefinder.MainActivity">

    <ImageView
        app:srcCompat="@drawable/pic5"
        android:id="@+id/imageView"
        android:contentDescription=""
        android:layout_width="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_height="100dp"
        android:layout_above="@+id/button6" />

    <Button
        android:text="@string/bus_stop_to_nbus_stop_text"
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:onClick="onClickBustop"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/location_to_ndestination"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:id="@+id/button10"
        android:onClick="onClickLocation"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Colombo Bus \nStops"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:id="@+id/button12"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button11"
        android:onClick="onClickHalt" />

    <Button
        android:text="@string/colombo_bus_nroute"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:id="@+id/button11"
        android:onClick="onClickBusRoute"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button10"
        android:layout_alignParentStart="true" />

    <ImageButton
        app:srcCompat="@mipmap/ic_train"
        android:id="@+id/pickmeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/box_back"
        android:onClick="onClickTrain"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button12"
        android:layout_marginBottom="22dp" />

    <ImageButton
        app:srcCompat="@mipmap/ic_lion_face_color_clipart_1"
        android:id="@+id/imageButton5"
        android:background="@drawable/box_back"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:onClick="onClickSingam"
        android:layout_marginEnd="19dp"
        android:layout_alignTop="@+id/pickmeButton"
        android:layout_alignParentEnd="true" />

    <ImageButton
        app:srcCompat="@mipmap/ic_uberriderlogo_e1454443856991"
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/box_back"
        android:onClick="onClickUber"
        android:layout_alignTop="@+id/pickmeButton"
        android:layout_alignEnd="@+id/button11" />

    <ImageButton
        app:srcCompat="@mipmap/ic_hjv"
        android:id="@+id/pi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/box_back"
        android:onClick="onClickPick"
        android:layout_marginStart="19dp"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Product of : Singam"
        android:layout_width="match_parent"
        android:id="@+id/textView19"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_alignParentBottom="true"
        android:layout_height="20dp"
        android:textColor="@android:color/darker_gray"
        android:gravity="bottom|center_horizontal" />

</RelativeLayout>
